2011-11-09  Alexei Svitkine  <asvitkine@chromium.org>

        Chromium: Add plumbing to enable dragging dev tools via the empty space on the toolbar.
        https://bugs.webkit.org/show_bug.cgi?id=71842

        These are the only WebKit-side changes needed. The rest will be done on the Chromium side.

        Chromium bug: http://crbug.com/44350

        Reviewed by Pavel Feldman.

        * public/WebDevToolsFrontendClient.h:
        (WebKit::WebDevToolsFrontendClient::moveWindowBy):
        * src/InspectorFrontendClientImpl.cpp:
        (WebKit::InspectorFrontendClientImpl::moveWindowBy):

2011-11-08  Jay Civelli  <jcivelli@chromium.org>

        Fixes and reenables the WebPageSerializer tests.
        https://bugs.webkit.org/show_bug.cgi?id=71874

        Reviewed by Adam Barth.

        * WebKit.gypi:
        * tests/WebPageNewSerializerTest.cpp:
        (WebKit::TestWebFrameClient::~TestWebFrameClient):
        (WebKit::WebPageNewSerializeTest::SetUp):
        (WebKit::WebPageNewSerializeTest::resourceVectorContains):
        (WebKit::TEST_F):
        * tests/WebPageSerializerTest.cpp:
        (WebKit::WebPageSerializerTest::WebPageSerializerTest):
        (WebKit::WebPageSerializerTest::webVectorContains):
        (WebKit::TEST_F):

2011-11-07  Adam Barth  <abarth@webkit.org>

        Move static "policy" state from SecurityOrigin.cpp to SecurityPolicy.cpp
        https://bugs.webkit.org/show_bug.cgi?id=71755

        Reviewed by Eric Seidel.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::setReferrerForRequest):
        * src/WebSecurityPolicy.cpp:
        (WebKit::WebSecurityPolicy::addOriginAccessWhitelistEntry):
        (WebKit::WebSecurityPolicy::removeOriginAccessWhitelistEntry):
        (WebKit::WebSecurityPolicy::resetOriginAccessWhitelists):
        (WebKit::WebSecurityPolicy::shouldHideReferrer):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::initializeMainFrame):

2011-11-08  Nat Duca  <nduca@chromium.org>
